--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,9 +5,10 @@
 body {
 	background-image: url(../images/organic-tiles.png);
 	background-color: #777777;
-	font-size: 25px;
+	font-size: 15px;
 	line-height: 32px;
 	width: 1200px;
+	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
 	}
 
 /***Heading Styling****/
@@ -17,8 +18,7 @@ header {
 	margin: 0px 0px 20px 0px;
 	background: #FFFFFF;
 	border: 1px solid #cccccc;
-	padding: 30px;
-	right-padding: 20px;
+	padding: 30px 30px 15px 30px;
 	}
 	
 #name {
@@ -28,12 +28,13 @@ header {
 	right-margin: 50px;
 	padding: 30px;
 	background: #4aaaa5;
+	font-size: 24px;
 	font-family: 'Georgia', Times, 'Times New Roman', serif;
 	color: #FFFFFF;
 	}	
 .navigation {
-	position: static;
-	left: -30px;
+	position: relative;
+	padding: 30px;
 }
 
 .navigation li:not(:first-child):before {
@@ -51,10 +52,14 @@ li {
 /****Generic Page Body Styling*****/
 h1, h2 {
 	color: #4aaaa5;
+	font-size: 25px;
 }
 .page_body {
 	position: relative;
 	width: 100%;
+	min-height: 100%;
+	margin-bottom: -50px;
+
 }
 .page_content {
 	position: relative;
@@ -78,8 +83,12 @@ h1, h2 {
 	text-align: center;
 }
 /****Index Page Styling*****/
-#aboutme {
-	
+#prof_pic {
+	float: left;
+	margin: 10px 20px 10px 0px;
+}
+#prof_text {
+	position: relative;
 }
 
 /*****Portfolio Page Styling*****/
@@ -91,9 +100,11 @@ table, th, td {
 footer {
 	position: static;
 	clear: both;	
-	width: 100%;
-	border: 
-	margin: auto;
+	width: 100%; 
+	height: 50px;
+	padding: 32px 0px;
 	background-color: #666666;
-	font: #ffffff;
+	color: #ffffff;
+	font-size: x-small;
+	text-align: center;
 	}
