--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -95,11 +95,25 @@ h1, h2 {
 table, th, td {
    border: 38px solid white;
 }
+.table {
+	float: left;
+  	position: relative;
+}
+.table_text {
+	position: absolute;
+	bottom: 20px;
+	left: 0px;
+	width: 100%;
+	text-align: center;
+	color: white;
+	font-size: 20px;
+	background-color: #4aaaa5;
+}
 
 /*****Footer Styling****/
 footer {
 	clear: both;	
-	width: 1200px; 
+	width: 100%; 
 	height: 50px;
 	padding: 32px 0px;
 	background-color: #666666;
