--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,7 +7,7 @@ body {
 	background-color: #777777;
 	font-size: 15px;
 	line-height: 32px;
-	width: 1200px;
+	width: 100%;
 	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
 	}
 
@@ -115,7 +115,7 @@ footer {
 	clear: both;	
 	width: 100%; 
 	height: 50px;
-	padding: 32px 0px;
+	padding: 32px 10px;
 	background-color: #666666;
 	color: #ffffff;
 	font-size: x-small;
